Ajustado os testes para receber paginacao