@@ -13,13 +13,12 @@ import br.com.erudio.restspringbooterudio.configs.TestConfigs;
 import br.com.erudio.restspringbooterudio.integrationtests.controller.withyml.mapper.YMLMapper;
 import br.com.erudio.restspringbooterudio.integrationtests.testcontainers.AbstractIntegrationTest;
 import br.com.erudio.restspringbooterudio.integrationtests.vo.AccountCredentialsVO;
+import br.com.erudio.restspringbooterudio.integrationtests.vo.PagedModelPerson;
 import br.com.erudio.restspringbooterudio.integrationtests.vo.PersonVO;
 import br.com.erudio.restspringbooterudio.integrationtests.vo.TokenVO;
-import org.junit.jupiter.api.BeforeAll;
+import br.com.erudio.restspringbooterudio.integrationtests.vo.wrappers.WrapperPersonVO;
+import org.junit.jupiter.api.*;
 import org.junit.jupiter.api.MethodOrderer.OrderAnnotation;
-import org.junit.jupiter.api.Order;
-import org.junit.jupiter.api.Test;
-import org.junit.jupiter.api.TestMethodOrder;
 import org.springframework.boot.test.context.SpringBootTest;
 
 import com.fasterxml.jackson.core.JsonProcessingException;
@@ -280,28 +279,29 @@ public class PersonControllerYamlTest extends AbstractIntegrationTest {
 	@Test
 	@Order(6)
 	public void testFindAll() throws JsonMappingException, JsonProcessingException {
-		
-		var content = given().spec(specification)
+
+		var wrapper = given().spec(specification)
 				.config(
 						RestAssuredConfig
-							.config()
-							.encoderConfig(EncoderConfig.encoderConfig()
-								.encodeContentTypeAs(
-									TestConfigs.CONTENT_TYPE_YML,
-									ContentType.TEXT)))
+								.config()
+								.encoderConfig(EncoderConfig.encoderConfig()
+										.encodeContentTypeAs(
+												TestConfigs.CONTENT_TYPE_YML,
+												ContentType.TEXT)))
 				.contentType(TestConfigs.CONTENT_TYPE_YML)
 				.accept(TestConfigs.CONTENT_TYPE_YML)
-					.when()
-					.get()
+				.queryParams("page", 1, "size", 10, "direction", "asc")
+				.when()
+				.get()
 				.then()
-					.statusCode(200)
-						.extract()
-						.body()
-						.as(PersonVO[].class, objectMapper);
+				.statusCode(200)
+				.extract()
+				.body()
+				.as(PagedModelPerson.class, objectMapper);
+
+		var people = wrapper.getContent();
 		
-		List<PersonVO> people = Arrays.asList(content);
-		
-		PersonVO foundPersonOne = people.get(0);
+		PersonVO foundPersonOne = people.getFirst();
 		
 		assertNotNull(foundPersonOne.getId());
 		assertNotNull(foundPersonOne.getFirstName());
@@ -309,29 +309,30 @@ public class PersonControllerYamlTest extends AbstractIntegrationTest {
 		assertNotNull(foundPersonOne.getAddress());
 		assertNotNull(foundPersonOne.getGender());
 		assertTrue(foundPersonOne.getEnabled());
-		
-		assertEquals(1, foundPersonOne.getId());
-		
-		assertEquals("123 Main Street", foundPersonOne.getFirstName());
-		assertEquals("John", foundPersonOne.getLastName());
-		assertEquals("Male", foundPersonOne.getAddress());
-		assertEquals("Doe", foundPersonOne.getGender());
-		
+
+		assertEquals(329, foundPersonOne.getId());
+
+		assertEquals("Adelbert", foundPersonOne.getFirstName());
+		assertEquals("Greenwood", foundPersonOne.getLastName());
+		assertEquals("4038 Fremont Park", foundPersonOne.getAddress());
+		assertEquals("Male", foundPersonOne.getGender());
+
 		PersonVO foundPersonSix = people.get(2);
-		
+
 		assertNotNull(foundPersonSix.getId());
 		assertNotNull(foundPersonSix.getFirstName());
 		assertNotNull(foundPersonSix.getLastName());
 		assertNotNull(foundPersonSix.getAddress());
 		assertNotNull(foundPersonSix.getGender());
-		assertTrue(foundPersonSix.getEnabled());
-		
-		assertEquals(3, foundPersonSix.getId());
-		
-		assertEquals("123 Mla memo", foundPersonSix.getFirstName());
-		assertEquals("anaaaa", foundPersonSix.getLastName());
-		assertEquals("Female", foundPersonSix.getAddress());
-		assertEquals("dias", foundPersonSix.getGender());
+
+		Assertions.assertFalse(foundPersonSix.getEnabled());
+
+		assertEquals(991, foundPersonSix.getId());
+
+		assertEquals("Adiana", foundPersonSix.getFirstName());
+		assertEquals("Yoseloff", foundPersonSix.getLastName());
+		assertEquals("9 Bultman Avenue", foundPersonSix.getAddress());
+		assertEquals("Female", foundPersonSix.getGender());
 	}
 
 	
